fixed heading getting cutoff

--- a/src/App.css
+++ b/src/App.css
@@ -322,9 +322,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         transform: translateY(-20px);
     }
 }
-.txt-rotate > .wrap {
+/* .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
-}
+} */
 
 /************ Skills Css ************/
 .skill {
@@ -688,7 +688,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Misc ************/
 
 .heart {
-  color: red;
+  color: rgb(223, 0, 0);
   font-size: 1.5em;
 }
 
